--- a/css/cookbook.css
+++ b/css/cookbook.css
@@ -272,3 +272,13 @@ h2 {
   margin-bottom: 0.3em;
   line-height: 1.3;
 }
+.recipe-title,
+.section-title,
+p,
+li {
+  margin-top: 0;
+  margin-bottom: 0.3em;
+  padding-top: 0;
+  padding-bottom: 0;
+  line-height: 1.3;
+}
