--- a/css/cookbook.css
+++ b/css/cookbook.css
@@ -282,3 +282,24 @@ li {
   padding-bottom: 0;
   line-height: 1.3;
 }
+.instructions-list {
+  margin-left: 1.5em;
+  margin-bottom: 1.2em;
+  padding-left: 1em;
+  list-style-type: decimal;
+  line-height: 1.6;
+  color: #4a4438;
+}
+
+.instructions-list li {
+  margin-bottom: 0.8em;
+}
+
+.section-title {
+  margin-top: 1.4em;
+  margin-bottom: 0.6em;
+  font-weight: 600;
+  color: #655940;
+  border-bottom: 1.5px dashed #b6ad94;
+  padding-bottom: 0.4em;
+}
